--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,10 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+
+# Teamwork
+-skill: Teamwork
+description: Ability to work in a team to to meet deadlines for small or large projects
+
+
+  
