--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: FBachelor of Software Engineering  
+  uni: USP
+  year: January, 2017 &mdash; December, 2020
   # awards:
   # summary:
